install cors add new endpoint for get user email add email to response in login and register fix getEncryptedMessage response for text
